<resources>
    <string name="app_name">ShoeStore</string>
    <string name="welcome_text">Welcome to the world of shoes</string>
    <string name="ContinueText">Continue</string>
    <string name="ImageContentDescription">Shoe Store Image</string>
    <string name="InstructionText">Instructions</string>
    <string name="InstructionTitle">Please click next to continue</string>
    <string name="InstructionDetails">you can choose your favourite shoe from our list</string>
    <string name="nextBtn">Next</string>
    <string name="LoginText">Login</string>
    <string name="EmailText">Email</string>
    <string name="Password">Password</string>
    <string name="RegisterText">Register</string>
    <string name="NameLabel">Name</string>
    <string name="CompanyLabel">Company</string>
    <string name="SizeLabel">Size</string>
    <string name="DescriptionLabel">Description</string>
    <string name="ShoeName">Shoe Name</string>
    <string name="ShoeDescription">Shoe Description</string>
    <string name="ShoeCompany">ShoeCompany</string>
    <string name="ShoeSize">Shoe Size</string>
    <string name="SaveBtn">Save</string>
    <string name="cancelBtn">Cancel</string>
    <string name="LogoutMenuItem">Logout</string>

</resources>
