<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.models.ShoeViewModel" />

        <variable
            name="item"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtShoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{item.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeDescription" />

        <EditText
            android:id="@+id/edtShoeName"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{item.name}"
            app:layout_constraintStart_toEndOf="@+id/shoeLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ShoeName"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtShoeName"
            app:layout_constraintEnd_toStartOf="@+id/edtShoeName"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edtShoeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{item.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeName" />

        <TextView
            android:id="@+id/shoeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ShoeDescription"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtShoeDescription"
            app:layout_constraintEnd_toStartOf="@+id/edtShoeDescription"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ShoeCompany"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtShoeCompany"
            app:layout_constraintEnd_toStartOf="@+id/edtShoeCompany"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ShoeSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtShoeSize"
            app:layout_constraintEnd_toStartOf="@+id/edtShoeSize"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edtShoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text='@{String.format("%.2f" , item.size)}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeCompany" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#C11313"
            android:text="@string/cancelBtn"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeSize" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="64dp"
            android:text="@string/SaveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtShoeSize" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
