<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="item"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:padding="16sp">

        <TextView
            android:id="@+id/companyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/CompanyLabel"
            app:layout_constraintBottom_toTopOf="@+id/sizeLabel"
            app:layout_constraintStart_toStartOf="@+id/sizeLabel"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/DescriptionLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeLabel" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/NameLabel"
            app:layout_constraintBottom_toTopOf="@+id/companyLabel"
            app:layout_constraintStart_toStartOf="@+id/companyLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/sizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/SizeLabel"
            app:layout_constraintBottom_toTopOf="@+id/descriptionLabel"
            app:layout_constraintStart_toStartOf="@+id/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/companyLabel" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{item.name}"
            app:layout_constraintBottom_toTopOf="@+id/companyText"
            app:layout_constraintStart_toStartOf="@+id/companyText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/companyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{item.company}"
            app:layout_constraintBottom_toTopOf="@+id/sizeText"
            app:layout_constraintStart_toStartOf="@+id/sizeText"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/sizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text='@{String.format("%.1f" , item.size)}'
            app:layout_constraintBottom_toTopOf="@+id/descriptionText"
            app:layout_constraintStart_toStartOf="@+id/descriptionText"
            app:layout_constraintTop_toBottomOf="@+id/companyText" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{item.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/sizeText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
